--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^6.0.2",
+    "@react-native-firebase/auth": "^6.0.2",
+    "@react-native-firebase/database": "^6.0.2",
     "react": "16.9.0",
     "react-native": "0.61.2"
   },
