Proteção de API Key

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ buck-out/
 *.keystore
 !debug.keystore
 
+# GoogleServices
+android/app/google-services.json
+
 # fastlane
 #
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
