--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@react-native-firebase/auth": "^6.0.2",
     "@react-native-firebase/database": "^6.0.2",
     "react": "16.9.0",
-    "react-native": "0.61.2"
+    "react-native": "0.61.2",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.3.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.2.2",
+    "react-navigation-stack": "^1.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
