--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/database": "^6.0.2",
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-camera": "^3.8.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.3.0",
     "react-navigation": "^4.0.10",
