--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.2.1",
     "@react-native-firebase/app": "^6.0.2",
     "@react-native-firebase/auth": "^6.0.2",
     "@react-native-firebase/database": "^6.0.2",
