--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^6.0.2",
     "@react-native-firebase/auth": "^6.0.2",
     "@react-native-firebase/database": "^6.0.2",
+    "formik": "^2.0.1",
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-camera": "^3.8.0",
