--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-animated-switch": "^0.3.2",
     "react-navigation-drawer": "^2.2.2",
-    "react-navigation-stack": "^1.10.2"
+    "react-navigation-stack": "^1.10.2",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
