--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.61.2",
     "react-native-camera": "^3.8.0",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-image-picker": "^1.1.0",
     "react-native-reanimated": "^1.3.0",
     "react-navigation": "^4.0.10",
     "react-navigation-animated-switch": "^0.3.2",
