--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.2.1",
-    "@react-native-firebase/app": "^6.0.2",
-    "@react-native-firebase/auth": "^6.0.2",
-    "@react-native-firebase/database": "^6.0.2",
+    "@react-native-firebase/app": "^6.0.3",
+    "@react-native-firebase/auth": "^6.0.3",
+    "@react-native-firebase/database": "^6.0.3",
     "@react-native-firebase/storage": "^6.0.3",
     "formik": "^2.0.1",
     "react": "16.9.0",
@@ -26,6 +26,7 @@
     "react-navigation-animated-switch": "^0.3.2",
     "react-navigation-drawer": "^2.2.2",
     "react-navigation-stack": "^1.10.2",
+    "rn-fetch-blob": "^0.11.2",
     "yup": "^0.27.0"
   },
   "devDependencies": {
