--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-camera": "^3.8.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-image-picker": "^1.1.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
