--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-navigation-animated-switch": "^0.3.2",
     "react-navigation-drawer": "^2.2.2",
     "react-navigation-stack": "^1.10.2",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
     "yup": "^0.27.0"
   },
   "devDependencies": {
