--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-navigation-stack": "^1.10.2",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
