--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-image-picker": "^1.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.3.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-animated-switch": "^0.3.2",
